# TATLIN.UNIFIED-test-task

./: CMakeLists.txt  README.md
include/: tape.h  tape_sorter.h
src/: main.cpp  tape_sorter.cpp
tests/: tape_tests.cpp  tests.cpp
